# playground

./: .gitignore  Pipfile  cpu_test.py  create_task_overhead.py  go.work  segfault.c
bench_api/: README.md
bench_api/goapi/: go.mod  main.go
bench_api/pyapi/: pyproject.toml
bench_api/pyapi/pyapi/: main.py
bench_api/pyapi/pyapi/database/: __init__.py  _crud.py  _engine.py  _models.py  _schemas.py
golang/gophercises/: README.md
golang/gophercises/cyoa/: layout.html  main.go  simplelayout.html
golang/gophercises/quiz_game/: main.go
golang/gophercises/url_shortener/: go.mod  main.go  urlmap.json
golang/gophercises/url_shortener/urlshort/: go.mod  go.sum  handler.go
nbs/: README.md  gradient_descent.ipynb  playground_utils.py  pytorchbearer.ipynb
rust/cpu_test/: Cargo.toml
rust/cpu_test/src/: main.rs
