[tool.poetry]
name = "pyapi"
version = "0.1.0"
description = ""
authors = ["Chasesc <schelthoff.chase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
pydantic = "^1.10.9"
SQLAlchemy = "^2.0.17"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
psycopg = {extras = ["binary"], version = "^3.1.9"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
